Initial commit - Whiteboard full project

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -20,7 +20,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icon/icon.png"
   
   flutter_lints: ^5.0.0
 
