--- a/.github/workflows/flutter-apk-release.yml
+++ b/.github/workflows/flutter-apk-release.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Flutter
+      - name: Setup Flutter (Flutter 3.27.1 → supports Dart 3.8.1)
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.8.3"
+          flutter-version: "3.27.1"
 
       - name: Install dependencies
         run: flutter pub get
