--- a/.github/workflows/flutter-apk-release.yml
+++ b/.github/workflows/flutter-apk-release.yml
@@ -13,10 +13,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Flutter (Flutter 3.27.1 → supports Dart 3.8.1)
+      - name: Setup Java (required for Android builds)
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Flutter (compatible with Dart 3.4 and above)
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.27.1"
+          flutter-version: "3.24.3"
+          cache: true
 
       - name: Install dependencies
         run: flutter pub get
